<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="onloading">加载中...</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="app_name">迪购</string>
    <string name="app_nametc">正大鸿泰</string>
    <string name="xqfb">需求发布</string>
    <string name="ddzx">¥ 到店咨询</string>
    <string name="sjhf">商家回复</string>
    <string name="ckzx">甄选标记</string>
    <string name="gtyd">沟通预定</string>
    <string name="ddgm">到店购买</string>
    <string name="custom_service_type">请选择需求所属类型</string>
    <string name="custom_service_date">请选择回复截至日期</string>
    <string name="custom_service_think">请输入需要预约的服务事项</string>
    <string name="custom_service_think_add">需要更多服务请补充...</string>
    <string name="mycommtent_str">发表评价内容</string>
    <string name="custom_service_name">联系人姓名</string>
    <string name="custom_service_agreement">我已阅读并同意服务协议声明</string>
    <string name="custom_service_phone">联系人方式</string>
    <string name="submit">提交</string>
    <string name="custom_service_address">添加地址</string>
    <string name="xqlb">需求类别</string>
    <string name="lxfs">联系方式</string>
    <string name="gddz">更多地址</string>
    <string name="yxsx">预约事项</string>
    <string name="vip_login">会员登录</string>
    <string name="find_password">找回密码</string>
    <string name="modif_password">修改密码</string>
    <string name="vip_register">会员注册</string>
    <string name="register_text">注册</string>
    <string name="custom_text">个人中心</string>
    <string name="custom_improvement">完善个人资料</string>
    <string name="account_safety">账户安全</string>
    <string name="fun_info">功能介绍</string>
    <string name="com_faq">常见问题</string>
    <string name="spe_version">特别说明</string>
    <string name="app_update">应用更新</string>
    <string name="feedback">投诉与反馈</string>
    <string name="soft_la">软件许可使用协议</string>
    <string name="account_text">账户</string>
    <string name="message_remind">消息提醒</string>
    <string name="message_select">选择接收的消息</string>
    <string name="safety_text">安全</string>
    <string name="accountandsafety">账户与安全</string>
    <string name="aboutdigo">关于</string>
    <string name="ddlq">到店领取</string>
    <string name="seekservice_sales">迪购端午节送您粽子喽</string>
    <string name="digoapp_download">迪购   1.0版     扫描二维码下载APP</string>
    <string name="messagesettest">消息设置</string>
    <string name="save_text">保存</string>
    <string name="message_set">消息设置</string>
    <string name="about_digo">关于迪购</string>
    <string name="c_jieshao">迪购是一款专为广大用户实现在线实体商业导购的平台软件，您足不出户，无需到店，就可货比三家，全览周边商铺的商品及促销活动，定制服务频道可在线发布需求，坐等店主“上门”，让您更省钱、省力、省时间！</string>
    <string name="c_neirong">服务项目包括商品定制和服务预约两项内容。</string>
    <string name="c_zhuyi">1、用户在填写需求时请认真选择商品或服务所属品类，品类错误将无法保障回馈信息的真实性；\n2、系统会自动识别您的地址，如有失误，请重新校正；\n3、以上两项为需求发布时的必填项，不能省略，请用户认真填写。</string>
    <string name="ponint_cou">有券的日子，折扣享不够</string>
    <string name="c_caozuo">1、首先选择您的需求类别进行认真的填写，商品品类（或服务类别）和用户地址为必填项，不能省略；\n2、系统会根据商家是否接受定制服务和用户的地址，来选定最近的20家优质商铺进行默认发送。发送后会提示用户成功或失败，发送成功后，系统会自动扣除用户5个迪币；\n3、商家收到用户发送的需求后，可在用户规定的回复截止时间内，进行商品介绍和服务指导，时间截止，商家将无法回复；\n4、用户可根据商家的回复内容来甄选、标记您满意的商家，进行电话咨询；\n5、查看商家地址，到店购买或签约服务。</string>
    <string name="ponint_aty">礼兑真情，暖融心意</string>
    <string name="custom_tab_good">商品采购</string>
    <string name="custom_tab_service">服务预约</string>
    <string name="my_custom_tab_1">需求已发布</string>
    <string name="my_custom_tab_2">商家已回复</string>
    <string name="my_custom_tab_3">定制已结束</string>
    <string name="exit_text">退出</string>
    <string name="seekservice">寻服务</string>
    <string name="seekservice_youerservice">寻找您需要的服务</string>
    <string name="name_text">姓名</string>
    <string name="nicheng_text">昵称</string>
    <string name="sex_text">性别</string>
    <string name="quyu_text">全部区域</string>
    <string name="product_category">全部类别</string>
    <string name="category_see">类别筛选</string>
    <string name="business_area">综合搜索</string>
    <string name="birthday_text">生日</string>
    <string name="job_text">职业</string>
    <string name="marryday_text">结婚纪念日</string>
    <string name="interest_text">兴趣</string>
    <string name="detail_addres_text">详细地址</string>
    <string name="village_text">所在小区</string>
    <string name="account_digo_login">账号登录</string>
    <string name="phone_number_login">快捷登录</string>
    <string name="phone_hint_login">请输入11位手机号码</string>
    <string name="search_text">请输入搜索内容</string>
    <string name="phone_authcode_login">请输入验证码</string>
    <string name="get_authcode_login">获取验证码</string>
    <string name="shortcut_authcode_login">用户名/手机号</string>
    <string name="password_text">请输入密码</string>
    <string name="username_text">用户名</string>
    <string name="bindingemail_text">绑定邮箱</string>
    <string name="modifpassword_text">密码修改</string>
    <string name="clean_cache_text">清理缓存</string>
    <string name="modifphone_text">绑定手机号</string>
    <string name="receive_phonemess">接收新消息通知</string>
    <string name="no_disturb">忽扰模式</string>
    <string name="system_mess">系统消息</string>
    <string name="life_comment">生活圈评论</string>
    <string name="no_life_comment">禁止生活圈评论的推送</string>
    <string name="no_system_mess">禁止系统所有消息推送</string>
    <string name="business_mess">商家消息</string>
    <string name="no_business_mess">禁止商家消息的推送</string>
    <string name="no_sys_mess">禁止系统所有消息的推送</string>
    <string name="recive_mess_nosound">接收消息并设为静音模式</string>
    <string name="thirdlogin_text">第三方账号登录</string>
    <string name="tips1">请确保您的手机畅通,用于接收验证码短信</string>
    <string name="send_phone_num">请输入您的手机号码</string>
    <string name="tips2">请设置用户名和密码并妥善保管</string>
    <string name="tips3">请设置密码并妥善保管</string>
    <string name="send_user_name">请输入您的用户名</string>
    <string name="password_hint">密码(6-16数字 、字母组合)</string>
    <string name="tishi">提示</string>
    <string name="sure_text">确定</string>
    <string name="confirm_passwrod">确认新密码</string>
    <string name="already_phone">该手机号已被注册</string>
    <string name="change_phone">换个手机</string>
    <string name="now_logintext">现在登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="regeteraty">新用户注册</string>
    <string name="next_text">下一步</string>
    <string name="home_page">首页</string>
    <string name="around_shop">周边商铺</string>
    <string name="find_text">发现</string>
    <string name="custom_service">定制服务</string>
    <string name="user_center">个人中心</string>
    <string name="exit_user">退出当前账户</string>
    <string name="exit_app">关闭迪购</string>
    <string name="home_search_text">搜索商品/店铺</string>
    <string name="home_clock_salestitle">限时拍</string>
    <string name="home_shop1_text">俞兆林旗舰店</string>
    <string name="home_shop1_name_item">家和家政服务部</string>
    <string name="home_shop1_eva_item">人</string>
    <string name="home_shop1_type_item">家政服务</string>
    <string name="home_shop1_gps_item">0.2km</string>
    <string name="search_shop_text">找商铺</string>
    <string name="search_shop_text_btn">搜索</string>
    <string name="search_shop_text_hint">寻找您喜欢的店铺</string>
    <string name="search_shop_text_brand">品牌名店</string>
    <string name="search_shop_text_good_brand">好店推荐</string>
    <string name="search_shop_text_fire_shop">上榜好店</string>
    <string name="storesdeatil_case">商场概况</string>
    <string name="look_salse">看促销</string>
    <string name="storesdeatil_layout">商业布局</string>
    <string name="storesdeatil_activity">优惠活动</string>
    <string name="storesdeatil_adress">商场地址</string>
    <string name="point_exchange">积分换购</string>
    <string name="time_sales">现实竞拍</string>
    <string name="you_now_money">您的当前财富是</string>
    <string name="digo_coin">币</string>
    <string name="look_money"><u>查看财富</u></string>
    <string name="storesdeatil_time">营业时间</string>
    <string name="dc_text">优惠券</string>
    <string name="storesdeatil_tel">服务电话</string>
    <string name="storesdeatil_tel_times">拨打140次</string>
    <string name="storesdeatil_salse_text">感谢2016又给了一次抢6s红包的机会哇!</string>
    <string name="storesdeatil_livenum">入住商铺</string>
    <string name="storesdeatil_livenums">家</string>
    <string name="storesdeatil_livenum_num">89</string>
    <string name="storedatil_case_floor_num">F4</string>
    <string name="storedatil_case_floor_name">儿童乐园</string>
    <string name="storedatil_case_introduce">王府井百货大楼是新中国自行投资建造的第一家大型国营零售百货商店，享有“新中国第一店”的美称。自1955年9月25日接待第一批顾客以来，经过几代人的艰辛努力，截止到2005年建店50周年之际，大楼年度总销售额已经超过65亿元，企业总资产达到40亿元，接待中外顾客40多亿人次。50年累计实现利税30亿元，为国家赚回了600个“百货大楼”。</string>
    <string name="Shopping_mall_overview">商场概况</string>
    <string name="shopdetail_address">北京市通州区新华东街126号北京上科华联商厦1层</string>
    <string name="Commercial_distribution">商业布局</string>
    <string name="Preferential_activity">优惠活动</string>
    <string name="Title_Mall_details">商场详情</string>
    <string name="Title_Shopping_mall_layout">商场布局</string>
    <string name="Title_Preferential_activity">优惠活动</string>
    <string name="android_text">北京爱情海公园位于北京市朝阳区太阳宫核心区域，西临京承高速，南临北三环，在地铁十三号线芍药居和光心门附近，Android 5.0中缺失的静音模式被重新加入；系统稳定性提 升；改进内存管理性能；修复应用突然关闭问题；修复使用Wi-Fi时网络设备过度消耗问题；修复
        无线网络连接问题。</string>
    <string name="content"> 店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.店铺详情介绍.</string>
    <string name="sale_title">促销</string>
    <string name="sale_score">积分换购</string>
    <string name="sale_pai">限时竞拍</string>
    <string name="sale_score_look">查看财富</string>
    <string name="sale_score_list_huangou">换购</string>
    <string name="sale_score_change">商品换购</string>
    <string name="sale_score_change_huiyuan">会员名</string>
    <string name="sale_score_change_lostmoney">剩余财富</string>
    <string name="sale_score_change_dianm">店名：</string>
    <string name="sale_score_change_price">市场价值：</string>
    <string name="sale_score_change_style">规格：</string>
    <string name="sale_score_change_ts">您花费的币，一旦兑换成功，将不予退还，兑换成功后，请尽快联系商家，一周内到店以底价进行换购。</string>
    <string name="sale_score_change_sure">确认兑换</string>
    <string name="sale_shop_title">商品详情</string>
    <string name="sale_shop_shuxing">宝贝属性：</string>
    <string name="sale_shop_end">兑换结束日期：</string>
    <string name="sale_shop_lost">剩余份数：</string>
    <string name="sale_shop_price">市场价值：</string>
    <string name="sale_shop_detail">商品详情</string>
    <string name="sale_shop_rule">兑换规则</string>
    <string name="sale_shop_history">兑换记录</string>
    <string name="sale_shop_change">我要兑换</string>
    <string name="sale_shop_go">进入店铺</string>
    <string name="sale_pai_title">拍品详情</string>
    <string name="sale_pai_rule">竞拍规则</string>
    <string name="sale_pai_history">出价记录</string>
    <string name="sale_pai_doing">正在进行</string>
    <string name="sale_pai_add">加价幅度</string>
    <string name="sale_pai_end">已结束</string>
    <string name="sale_pai_ing">竞拍中</string>
    <string name="sale_pai_will">倒计时</string>
    <string name="sale_pai_today">今\n天</string>
    <string name="sale_pai_tommorow">明\n天</string>
    <string name="sale_pai_xian">限时限量 价高者得</string>
    <string name="sale_pai_desc">距本场结束：</string>
    <string name="sale_pai_state">拍品状态</string>
    <string name="sale_pai_state_now">马上拍</string>
    <string name="sale_pai_state_end">已结束</string>
    <string name="sale_pai_state_doing">准备中</string>
    <string name="sale_pai_ts">周一至周五，每天的竞拍时间只设置三个时段，每个时段正点开始，时间1个小时</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
</resources>