<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/in_titile_bar"
        layout="@layout/title_bar_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />


    <ImageView
        android:id="@+id/ivlogo_login_re"
        android:layout_width="@dimen/base_dimen_160"
        android:layout_height="@dimen/base_dimen_160"
        android:layout_below="@id/in_titile_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/login_logo" />

    <TextView
        android:id="@+id/tips1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivlogo_login_re"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_30"
        android:text="@string/tips1"
        android:textColor="@color/black_text"
        android:textSize="@dimen/base_dimen_24" />

    <LinearLayout
        android:id="@+id/account_digo_lin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_240"
        android:layout_below="@id/tips1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/login_bg_input_first"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/pnoneiv"
                android:layout_width="@dimen/base_dimen_34"
                android:layout_height="@dimen/base_dimen_34"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/icon_ipho" />

            <EditText
                android:id="@+id/edit_phone_num"
                android:layout_width="@dimen/base_dimen_720"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_12"
                android:layout_toRightOf="@id/pnoneiv"
                android:background="@null"
                android:digits="0123456789"
                android:gravity="center_vertical"
                android:hint="@string/phone_hint_login"
                android:maxLength="11"
                android:paddingLeft="@dimen/base_dimen_20"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_30" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/erweimaiv"
                android:layout_width="@dimen/base_dimen_34"
                android:layout_height="@dimen/base_dimen_34"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/icon_yanzheng" />

            <EditText
                android:id="@+id/edit_phone_autncode"
                android:layout_width="@dimen/base_dimen_720"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_32"
                android:layout_toRightOf="@id/erweimaiv"
                android:background="@null"
                android:digits="0123456789"
                android:gravity="center_vertical"
                android:hint="@string/phone_authcode_login"
                android:maxLength="6"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_30" />

            <Button
                android:id="@+id/get_autncode_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/base_dimen_24"
                android:background="@color/white_text"
                android:gravity="center_vertical"
                android:text="@string/get_authcode_login"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/base_dimen_30" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tips2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_digo_lin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:text="@string/tips2"
        android:textColor="@color/black_text"
        android:textSize="@dimen/base_dimen_24" />

    <LinearLayout
        android:id="@+id/account_shortcut_lin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_240"
        android:layout_below="@id/tips2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/login_bg_input_second"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/shortcut_num_iv"
                android:layout_width="@dimen/base_dimen_34"
                android:layout_height="@dimen/base_dimen_34"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/icon_man" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="@dimen/base_dimen_720"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_12"
                android:layout_toRightOf="@id/shortcut_num_iv"
                android:background="@null"
                android:digits="0123456789abcdefghijgklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:gravity="center_vertical"
                android:hint="用户名(6-16数字 、字母组合)"
                android:maxLength="16"
                android:paddingLeft="@dimen/base_dimen_20"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_30" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/suoiv"
                android:layout_width="@dimen/base_dimen_34"
                android:layout_height="@dimen/base_dimen_34"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/icon_suo" />

            <EditText
                android:id="@+id/edit_shortcut_password"
                android:layout_width="@dimen/base_dimen_720"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_32"
                android:layout_toRightOf="@id/suoiv"
                android:background="@null"
                android:digits="0123456789abcdefghijgklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:maxLength="16"
                android:password="true"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_30" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_100"
        android:layout_below="@id/account_shortcut_lin"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/bigbtn_selector"
        android:gravity="center"
        android:text="@string/register_text"
        android:textColor="@color/white_text"
        android:textSize="@dimen/base_dimen_40" />

</RelativeLayout>