<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F4F4F4"
                android:clipToPadding="true"
                android:fitsSystemWindows="true">


    <include
        android:id="@+id/in_titile_bar"
        layout="@layout/title_bar_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <TextView
        android:id="@+id/tips3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_titile_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:text="@string/tips3"
        android:textColor="@color/black_text"
        android:textSize="@dimen/base_dimen_24"/>

    <LinearLayout
        android:id="@+id/account_shortcut_lin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_240"
        android:layout_below="@id/tips3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/login_bg_input_second"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/shortcut_num_iv"
                android:layout_width="@dimen/base_dimen_34"
                android:layout_height="@dimen/base_dimen_34"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/icon_suo"/>

            <EditText
                android:id="@+id/edit_shortcut_num"
                android:layout_width="@dimen/base_dimen_720"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_12"
                android:layout_toRightOf="@id/shortcut_num_iv"
                android:background="@null"
                android:digits="0123456789abcdefghijgklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:maxLength="16"
                android:paddingLeft="@dimen/base_dimen_20"
                android:password="true"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_30"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/suoiv"
                android:layout_width="@dimen/base_dimen_34"
                android:layout_height="@dimen/base_dimen_34"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/icon_suoful"/>

            <EditText
                android:id="@+id/edit_shortcut_password"
                android:layout_width="@dimen/base_dimen_720"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_32"
                android:layout_toRightOf="@id/suoiv"
                android:background="@null"
                android:digits="0123456789abcdefghijgklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:gravity="center_vertical"
                android:hint="@string/confirm_passwrod"
                android:maxLength="16"
                android:password="true"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_30"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_100"
        android:layout_below="@id/account_shortcut_lin"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/bigbtn_selector"
        android:text="@string/sure_text"
        android:textColor="@color/white_text"
        android:textSize="@dimen/base_dimen_40"/>

</RelativeLayout>