<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F4F4F4"
                android:clipToPadding="true"
                android:fitsSystemWindows="true">

    <include
        android:id="@+id/in_titile_bar"
        layout="@layout/title_bar_include"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <TextView
        android:id="@+id/tips3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_titile_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:text="@string/tips1"
        android:textColor="@color/black_text"
        android:textSize="@dimen/base_dimen_24"/>

    <LinearLayout
        android:id="@+id/account_digo_lin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_120"
        android:layout_below="@id/tips3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:background="@drawable/myphone"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/erweimaiv"
                android:layout_width="@dimen/base_dimen_33"
                android:layout_height="@dimen/base_dimen_37"
                android:layout_marginLeft="@dimen/base_dimen_26"
                android:background="@drawable/mycode"/>

            <EditText
                android:id="@+id/edit_phone_autncode"
                android:layout_width="@dimen/base_dimen_200"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_dimen_32"
                android:layout_toRightOf="@id/erweimaiv"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/phone_authcode_login"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColorHint="@color/text_C6"
                android:textSize="@dimen/base_dimen_28"/>

            <Button
                android:id="@+id/btn_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/base_dimen_24"
                android:background="@color/white_text"
                android:gravity="center_vertical"
                android:text="@string/get_authcode_login"
                android:textSize="@dimen/base_dimen_30"
                android:textColor="@color/gray_text"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/editPhoneAutncode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_digo_lin"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/base_dimen_20"
        android:layout_marginRight="@dimen/base_dimen_20"
        android:layout_marginTop="@dimen/base_dimen_20"
        android:background="@drawable/bigbtn_selector"
        android:text="下一步"
        android:textColor="@color/white_text"
        android:textSize="@dimen/base_dimen_40"/>

</RelativeLayout>